# coding-standards-agent

./: .gitignore  AGENTS.md  README.md  pyproject.toml
src/coding_standards_mcp/: __init__.py  models.py  server.py  standards_repository.py
standards/: mobile_apps.md  python_apps.md  rest_apis.md  ui_web_apps.md
tests/: test_server_tools.py  test_standards_repository.py
