[project]
name = "coding-standards-mcp-server"
version = "0.1.0"
description = "MCP server for retrieving centralized coding standards."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "mcp>=1.9,<2",
]

[project.scripts]
coding-standards-mcp-server = "coding_standards_mcp.server:main"

[dependency-groups]
dev = [
    "pytest>=8.3",
    "ruff>=0.11",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/coding_standards_mcp"]

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

